# application

./: .gitignore  Dockerfile  main.py  pyproject.toml  test.ipynb  train.py
.github/workflows/: docker.yaml  prod.yaml
app/: api.py  run.sh
